--- a/tutorial2/tutorial2.ipynb
+++ b/tutorial2/tutorial2.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -693,14 +693,25 @@
       "{'hello': 'world'}\n",
       "{'x': {'hello': 'world'}} \n",
       "\n",
+      "Length:\n",
+      "x has 1 key-val pairs\n",
+      "\n",
       "Deleting a key-val pair\n",
       "{}\n",
       "{'x': {}} <-notice that the y['x'] entry has also changed. b/c the reference to x was stored in y['x']\n",
       "clear() removes all the key-val pairs! resulting in z to be {} \n",
       "\n",
-      "Getting the keys of a dict: they keys() method\n",
-      "dict_keys([1, '2', 3]) 3\n",
+      "Getting the keys of a dict: the keys() method\n",
+      "dict_keys([1, '2', 3])\n",
       "[1, '2', 3] \n",
+      "\n",
+      "Getting the values of a dict: the values() method\n",
+      "dict_values(['1', 'two', 3.0])\n",
+      "['1', 'two', 3.0] \n",
+      "\n",
+      "Getting the key-val pairs of a dict: the items() method\n",
+      "dict_items([(1, '1'), ('2', 'two'), (3, 3.0)])\n",
+      "[(1, '1'), ('2', 'two'), (3, 3.0)] \n",
       "\n"
      ]
     }
@@ -726,9 +737,15 @@
     "print('clear() removes all the key-val pairs! resulting in z to be', z, '\\n')\n",
     "\n",
     "x = {1: '1', '2': 'two', 3: 3.}\n",
-    "print('Getting the keys of a dict: they keys() method')\n",
+    "print('Getting the keys of a dict: the keys() method')\n",
     "print(x.keys())\n",
-    "print(list(x.keys()), '\\n')"
+    "print(list(x.keys()), '\\n')\n",
+    "print('Getting the values of a dict: the values() method')\n",
+    "print(x.values())\n",
+    "print(list(x.values()), '\\n')\n",
+    "print('Getting the key-val pairs of a dict: the items() method')\n",
+    "print(x.items())\n",
+    "print(list(x.items()), '\\n')"
    ]
   },
   {
